<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:stretchColumns="*">
        <TableRow>

            <TextView
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/result"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/total_questions"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:id="@+id/totalQuestionsCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text=""
                android:background="@drawable/table_cell_bg"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/correct_answers"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:id="@+id/correctAnswerCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text=""
                android:background="@drawable/table_cell_bg"/>
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/wrong_answer"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:id="@+id/wrongAnswerCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text=""
                android:background="@drawable/table_cell_bg"/>
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/your_score"
                android:background="@drawable/table_cell_bg"/>

            <TextView
                android:id="@+id/yourScoreCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text=""
                android:background="@drawable/table_cell_bg"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="306dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@drawable/table_header_bg"
            android:backgroundTint="@color/light_gray"
            android:text="@string/try_again"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/result_analysis_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@drawable/table_cell_bg"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/result_analysis"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>